# KGpipe

./: .dockerignore  .gitignore  .gitlab-ci.yml  Backlog.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
docs/: configuration.md  evaluation.md  explorer.md  main.md  metakg.md  parameters.md  pipelines.md  reproduce.md  tasks.md  view.md
docs/metrics/: entity_coverage.md
experiments/examples/: init.sh  pyproject.toml
experiments/explorer/: README.md
experiments/llm_examples/: README.md
experiments/moviekg/: Dockerfile  Makefile  README.md  docker_env  env  eval.sh  movie-ontology.ttl  pipeline.conf
experiments/ontologies/: scads-papers.owl.ttl  scads-papers.ttl
experiments/ontologies/src/: onto_chat.py
experiments/param-opti/: .gitignore  Agent.md  README.md  run_experiment.py  run_qap_mock.py
experiments/param-opti/input/: Parameters.md
experiments/param-opti/spec/: implementation_state.md  llmextractor.md
experiments/pdfpipeline/: README.md  pdfpipeline.py
experiments/task_dev/: README.md
experiments/task_dev/src/: dummy_tasks.py  score_int.py
experiments/text-pipelines/: .env  README.md  env  pyproject.toml
experiments/text-pipelines/src/text_pipelines/: NLI_TripletCritic.py  config.py  run_all_pipes.py  task_examples.py  test_examples.py  text_eval.py  text_examples.py  text_pipe_eval.py  text_pipes.py  text_tasks.py
experiments/text-pipelines/src/text_pipelines/linker/: custom_rl.py
experiments/text-pipelines/src/text_pipelines/text2kgbench/: README.md  json_to_ttl.py  jsonl_to_txt.py  run.py
experiments/text-pipelines/test/: Titanic.txt  genie_output.json  graphene_output.nt  imojie_output.txt  minie_output.txt  test.te.json
experiments/text-pipelines/wrappers/genie/: Dockerfile  README.md  genie.sh
experiments/text-pipelines/wrappers/graphene/: Dockerfile  README.md  graphene.sh
experiments/text-pipelines/wrappers/imojie/: Dockerfile  README.md  imojie.sh
experiments/text-pipelines/wrappers/minie/: Dockerfile  README.md  minie.sh
experiments/text-pipelines/wrappers/openie6/: Dockerfile  README.md  openie6.sh
scripts/: docker-virtuoso.sh  kgpipe_cp  kgpipe_mv  memwrap  moviekg_docker.sh
src/kgback/: back.py  cli.py  config.py  postgres_back.py  sparql_back.py  sqlite_back.py
src/kgcore/model/: ontology.py
src/kgpipe/: __init__.py  mcp_config.yaml
src/kgpipe/api/: mcp_server.py
src/kgpipe/cli/: __init__.py  clean.py  config.py  discover.py  eval.py  eval_new.py  list.py  main.py  registry.py  report.py  run.py  show.py  task.py
src/kgpipe/common/: __init__.py  annotations.py  config.py  decorators.py  definitions.py  discovery.py  io.py  models.py  registry.py  systemgraph.py  util.py
src/kgpipe/datasets/: multipart_multisource.py
src/kgpipe/evaluation/: __init__.py  aspects.py  base.py  cluster.py  evaluator.py  plot.py  reports.py  util.py  writer.py
src/kgpipe/execution/: __init__.py  config.py  dag.py  docker.py  remote.py  runner.py  wrapper.py
src/kgpipe/generation/: builders.py  config.py  loaders.py  plot.py
src/kgpipe/meta/: __init__.py  definitions.py  ontology.py  provenance.py  serialization.py  subgraphs.py  systemgraph.py  util.py  vocabularies.py
src/kgpipe/test/: test_config.py  test_meta.py  test_meta_kg_query.py  test_metaconfigkg.py  test_owl_to_mermaid.py  util.py
src/kgpipe/test_data/: prefixes.ttl  product_kg.ttl
src/kgpipe_eval/: __init__.py  api.py  evaluator.py
src/kgpipe_eval/config/: manager.py
src/kgpipe_eval/metrics/: __init__.py  alignment_utils.py  annotation_utils.py  consistency_violations.py  duplicates.py  entity_alignment.py  kg_utils.py  llm_annotation.py  reference_entities.py  statistics.py  triple_alignment.py
src/kgpipe_eval/test/: examples.py  test_alignment_eval.py  test_config_manager.py  test_duplicates_eval.py  test_evaluator.py  test_kg_utils.py  test_llm_eval.py  test_metric_utils.py  test_statistics_eval.py  utils.py
src/kgpipe_eval/utils/: alignment_utils.py  annotation_utils.py  entailment_utils.py  kg_utils.py  measurement_utils.py  metric_utils.py  verbalize_utils.py
src/kgpipe_llm/: __init__.py  any_extraction.py  json_mapping.py  json_sa_construct.py  rdf_om.py  tasks.py  text_triple_extract.py
src/kgpipe_llm/alignment/: json_alignment.py
src/kgpipe_llm/common/: __init__.py  api_utils.py  config.py  core.py  llm_tasks.py  models.py  rdf_tasks.py  snippets.py  tasks.py
src/kgpipe_llm/construct/: construct.py
src/kgpipe_llm/evaluation/: graph_checker.py  triple_coverage.py  triple_labelling.py
src/kgpipe_llm/test/: examples.py  kiara_tests.py  test_alignment_tasks.py  test_any_extraction.py  test_basic.py  test_construction_tasks.py  test_jsonld_parsing.py  test_llm_tasks.py  test_openai.py  test_schema_model.py
src/kgpipe_parameters/: README.md  __init__.py  config_mapper.py
src/kgpipe_parameters/clustering/: __init__.py  clusterer.py  models.py  similarity.py
src/kgpipe_parameters/extraction/: __init__.py  base.py  chunk_filter.py  models.py  param_miner.py  patterns.py  utils.py
src/kgpipe_parameters/tests/: __init__.py  conftest.py  test_chunk_filter.py  test_clustering.py  test_paramters_extraction.py  test_visualization.py
src/kgpipe_parameters/visualization/: __init__.py  kgpipe_parameter_explorer.py
src/kgpipe_tasks/: __init__.py  tasks.py
src/kgpipe_tasks/cleaning/: clean.py
src/kgpipe_tasks/common/: __init__.py  bench_benchutils.py  benchutils.py  demo_benchutils.py  dummies.py
src/kgpipe_tasks/construction/: __init__.py  construct.py  extract_json.py  foo.py  json_processing.py  json_sampler.py  json_to_rdf.py  mapping.py
src/kgpipe_tasks/entity_resolution/: __init__.py  entity_match.py
src/kgpipe_tasks/reasoning_inference/: __init__.py  type_completion.py
src/kgpipe_tasks/schema_alignment/: __init__.py  ontology_tasks.py  transformer_tasks.py
src/kgpipe_tasks/test/: __init__.py  test_common.py  (+6 more)
src/kgpipe_view/: __init__.py  diagram_tab.py  evaluations_tab.py  kgpipe.owl.ttl  kgpipe_view.py  meta_kg_query.py  owl_to_mermaid.py  pipelines_tab.py  tasks_tab.py  ui_common.py
(+267 files in other folders)
