[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "KGpipe"
version = "0.7.0"
description = "Knowledge Graph pipeline evaluation Framework"
authors = [
    {name = "KGpipe", email = "hofer@informatik.uni-leipzig.de"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docker>=7.0.0", # docker-sdk-for-python
    "PyYAML>=6.0",
    "click>=8.0",
    "pandas>=1.5.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "rdflib>=6.0.0",
    "matplotlib>=3.5.0",
    "networkx>=2.8.0",
    # ML stack (torch/transformers) is intentionally NOT in base deps.
    # Install via `pip/uv pip install ".[ml]"` plus the desired torch index (CPU/CUDA).
    "pulp>=3.3.0",
    "pytest>=8.4.2",
    "dotenv>=0.9.9",
    "seaborn>=0.13.2",
    "tiktoken>=0.11.0",
    "jsonpath-ng>=1.7.0",
    "SPARQLWrapper>=2.0.0",
    "redis>=7.0.0",
    "kgcore @ git+https://github.com/Vehnem/kgcore.git",
    "streamlit-elements>=0.1.0",
    "uvicorn>=0.41.0",
    "fastapi>=0.135.1",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-mock", "pytest-cov", "ruff", "black"]
cpu = [
    "torch",
    "torchvision",
    "torchaudio",
]
cuda = [
    "torch",
    "torchvision",
    "torchaudio",
]
ml = [
    "transformers>=4.50.0",
    "sentence_transformers>=4.1.0",
]

[tool.uv]
conflicts = [
    [
        { extra = "cpu" },
        { extra = "cuda" },
    ],
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cuda", extra = "cuda" },
]
torchvision = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cuda", extra = "cuda" },
]
torchaudio = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cuda", extra = "cuda" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

# CUDA wheels live on a separate PyTorch index.
# If you need a different CUDA version, change the URL (e.g. `cu128`, `cu126`, `cu121`).
[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["kgpipe*"]

[tool.setuptools.package-dir]
"" = "src" 

[tool.setuptools.package-data]
kgpipe = ["*.yaml", "*.yml"]

[project.scripts]
kgpipe = "kgpipe.cli.main:cli"

[tool.coverage.run]
source = ["src/kgpipe"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/env/*",
    "*/.venv/*",
    "*/.env/*",
    "setup.py",
    "conftest.py"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@\\(abc\\.\\)\\?abstractmethod",
    "pass",
    "raise ImportError"
]

[tool.coverage.html]
directory = "htmlcov"
